update pa-env.sh wrt to new version; add some fixes such as MaxPermSize; make yarn the default mode